[package]
name = "buildchain"
version = "0.4.9"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
description = "Software for creating and managing a distributed and reproducible chain of builds"
documentation = "https://docs.rs/buildchain"
repository = "https://github.com/system76/buildchain"
readme = "README.md"
license = "GPL-3.0"

[lib]
name = "buildchain"
path = "src/lib.rs"

[[bin]]
name = "buildchain"
path = "src/main.rs"
doc = false

[dependencies]
base32 = "0.4.0"
clap = "2.32.0"
lxd = "0.1.8"
plain = "0.2.3"
rand = "0.6.5"
reqwest = "0.9.11"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
sha2 = "0.8.0"
sodalite = "0.3.0"
tempdir = "0.3.7"
